--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <p class="primero-paragrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium, inventore est laborum sequi neque maiores hic. Dignissimos, ipsum asperiores animi quisquam libero rem nulla tenetur molestias a ullam ad ipsam.</p>
+    <p class="primero-paragrafo">1Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium, inventore est laborum sequi neque maiores hic. Dignissimos, ipsum asperiores animi quisquam libero rem nulla tenetur molestias a ullam ad ipsam.</p>
 
     <p class="segundo-paragrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam veniam natus officia tenetur voluptatibus quae quo suscipit doloremque! Eaque minima hic non ipsa minus fugiat sunt porro voluptas corporis vel.</p>
 </body>
